--- a/labs/routing-guards-and-preload-strategies/begin/tsconfig.json
+++ b/labs/routing-guards-and-preload-strategies/begin/tsconfig.json
@@ -18,5 +18,9 @@
       "es2017",
       "dom"
     ]
-  }
+  },
+  "angularCompilerOptions": {
+    "strictTemplates": true,
+    "fullTemplateTypeCheck": true,
+  },
 }
